--- a/src/output.css
+++ b/src/output.css
@@ -688,8 +688,8 @@ video {
   bottom: 35%;
 }
 
-.bottom-\[55\%\] {
-  bottom: 55%;
+.bottom-\[50\%\] {
+  bottom: 50%;
 }
 
 .end-1 {
@@ -708,20 +708,20 @@ video {
   right: 50%;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .right-4 {
   right: 1rem;
 }
 
-.top-0\.5 {
-  top: 0.125rem;
+.top-0 {
+  top: 0px;
 }
 
 .top-1 {
   top: 0.25rem;
+}
+
+.top-28 {
+  top: 7rem;
 }
 
 .isolate {
@@ -748,12 +748,20 @@ video {
   z-index: 30;
 }
 
-.col-span-5 {
-  grid-column: span 5 / span 5;
+.col-span-3 {
+  grid-column: span 3 / span 3;
 }
 
 .col-span-7 {
   grid-column: span 7 / span 7;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.col-span-4 {
+  grid-column: span 4 / span 4;
 }
 
 .row-span-3 {
@@ -1028,6 +1036,11 @@ video {
   height: 550px;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1050,6 +1063,10 @@ video {
 
 .w-\[10\%\] {
   width: 10%;
+}
+
+.w-\[15\%\] {
+  width: 15%;
 }
 
 .w-\[200px\] {
@@ -1083,6 +1100,38 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[50px\] {
+  width: 50px;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-\[700px\] {
+  width: 700px;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.max-w-\[100\%\] {
+  max-width: 100%;
 }
 
 .flex-shrink {
@@ -1455,6 +1504,14 @@ video {
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-6 {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
 .grid-rows-3 {
@@ -2015,10 +2072,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -2089,16 +2142,16 @@ video {
   border-width: 1px;
 }
 
-.border-\[6px\] {
-  border-width: 6px;
-}
-
-.border-2 {
-  border-width: 2px;
+.border-\[0\.5px\] {
+  border-width: 0.5px;
 }
 
 .border-\[1px\] {
   border-width: 1px;
+}
+
+.border-\[6px\] {
+  border-width: 6px;
 }
 
 .border-x {
@@ -2167,15 +2220,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-\[1\] {
-  border-color: 1;
-}
-
-.border-gray-950 {
-  --tw-border-opacity: 1;
-  border-color: rgb(3 7 18 / var(--tw-border-opacity));
 }
 
 .bg-\[\#CC9B6D\] {
@@ -2378,24 +2422,12 @@ video {
   padding: 0.625rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
 .p-4 {
   padding: 1rem;
 }
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-96 {
-  padding: 24rem;
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .px-1 {
@@ -2406,11 +2438,6 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 
 .px-2 {
@@ -2720,19 +2747,14 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-red-300 {
-  --tw-text-opacity: 1;
-  color: rgb(252 165 165 / var(--tw-text-opacity));
-}
-
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2960,6 +2982,14 @@ video {
   outline-style: double;
 }
 
+.outline-1 {
+  outline-width: 1px;
+}
+
+.outline-amber-500 {
+  outline-color: #f59e0b;
+}
+
 .ring {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -3057,6 +3087,10 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 .duration-\[350ms\] {
@@ -3359,6 +3393,11 @@ section {
   }
 }
 
+.hover\:bg-amber-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 158 11 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-amber-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(180 83 9 / var(--tw-bg-opacity));
@@ -3380,6 +3419,10 @@ section {
 
 .hover\:underline:hover {
   text-decoration-line: underline;
+}
+
+.hover\:outline-0:hover {
+  outline-width: 0px;
 }
 
 .before\:hover\:text-center:hover::before {
@@ -3463,6 +3506,13 @@ section {
     -webkit-line-clamp: 2;
   }
 
+  .md\:line-clamp-3 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -3485,6 +3535,10 @@ section {
 
   .md\:w-\[85\%\] {
     width: 85%;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:grid-cols-12 {
@@ -3521,6 +3575,14 @@ section {
 
   .md\:gap-8 {
     gap: 2rem;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
+  }
+
+  .md\:gap-6 {
+    gap: 1.5rem;
   }
 
   .md\:space-y-6 > :not([hidden]) ~ :not([hidden]) {
@@ -3571,6 +3633,18 @@ section {
     display: none;
   }
 
+  .lg\:w-\[17\%\] {
+    width: 17%;
+  }
+
+  .lg\:w-\[18\%\] {
+    width: 18%;
+  }
+
+  .lg\:w-\[19\%\] {
+    width: 19%;
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
@@ -3598,11 +3672,6 @@ section {
     padding-bottom: 2rem;
   }
 
-  .lg\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .lg\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -3615,14 +3684,38 @@ section {
 }
 
 @media (min-width: 1200px) {
+  .xl\:flex {
+    display: flex;
+  }
+
   .xl\:p-0 {
     padding: 0px;
   }
 }
 
+@media (min-width: 1320px) {
+  .\32xl\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 1600px) {
+  .\33xl\:w-\[20\%\] {
+    width: 20%;
+  }
+
   .\33xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .\33xl\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .\33xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
